Fixed Bug on NavBarSectionDivider [Overflow]

--- a/css/searchPage.css
+++ b/css/searchPage.css
@@ -114,13 +114,13 @@ main {
 }
 
 .nav-item:nth-child(odd) {
-    padding-left: 2vmax;
-    padding-right: 2vmax;
+    padding-left: 1vmax;
+    padding-right: 1vmax;
 }
 
 .nav-item:nth-child(even) {
-    padding-left: 8vmax;
-    padding-right: 8vmax;
+    padding-left: 7vmax;
+    padding-right: 7vmax;
 }
 
 #navbar-profile-options a:hover {
@@ -160,7 +160,7 @@ main {
 .profile-text p {
     text-align: left;
     font-family: 'ProductSansBold';
-    font-size: 2.25rem;
+    font-size: 2.25vmax;
 }
 
 #profile-results-holder {
@@ -190,19 +190,19 @@ main {
 
 .profile-title {
     font-family: 'ProductSansBold';
-    font-size: 1.25rem;
+    font-size: 1.25vmax;
     margin-bottom: 0rem;
 }
 
 .profile-category {
     font-family: 'ProductSansRegular';
-    font-size: 0.75rem;
+    font-size: 0.75vmax;
     font-style: italic;
     margin-bottom: 0.10rem;
 }
 
 .profile-description {
-    font-size: 0.5rem;
+    font-size: 0.5vmax;
     font-family: 'ProductSansRegular';
 }
 
